[gd_scene load_steps=8 format=3 uid="uid://dsfrcfvj6lmch"]

[ext_resource type="Script" path="res://objects/tree/tree.gd" id="1_1c5pm"]
[ext_resource type="Texture2D" uid="uid://m0v4b7rmeec8" path="res://objects/tree/tree.svg" id="1_eb0fj"]
[ext_resource type="Texture2D" uid="uid://ce5cnseaqrn4b" path="res://player/stamina_bg.svg" id="3_5cnng"]
[ext_resource type="Texture2D" uid="uid://csdnwrhkmnn0o" path="res://player/stamina.svg" id="4_261w7"]
[ext_resource type="AudioStream" uid="uid://cu4gcay3555ni" path="res://sound/sfx/pop.mp3" id="5_hm06b"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yx2bc"]
radius = 11.0
height = 120.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mue1b"]
radius = 11.0
height = 92.55

[node name="Tree" type="Area2D" groups=["avoid"]]
position = Vector2(0, -13)
collision_layer = 8
collision_mask = 1024
script = ExtResource("1_1c5pm")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -56)
texture = ExtResource("1_eb0fj")

[node name="TrunkCollisions" type="CollisionShape2D" parent="."]
position = Vector2(0, -48)
shape = SubResource("CapsuleShape2D_yx2bc")

[node name="LeafCollisions0" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -96)
rotation = 1.0472
shape = SubResource("CapsuleShape2D_mue1b")

[node name="LeafCollisions1" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -96)
rotation = -1.0472
shape = SubResource("CapsuleShape2D_mue1b")

[node name="ChopTimer" type="Timer" parent="."]
one_shot = true

[node name="Health" type="TextureProgressBar" parent="."]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -156.0
offset_right = 60.0
offset_bottom = -136.0
grow_vertical = 0
value = 100.0
fill_mode = 4
texture_under = ExtResource("3_5cnng")
texture_progress = ExtResource("4_261w7")
metadata/_edit_use_anchors_ = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_hm06b")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="ChopTimer" to="." method="_on_chop_timer_timeout"]
